--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,15 +1,8 @@
-  {
-
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "server.js"
-        }
-    ],
+{
     "version": 2,
     "builds": [
         {
-            "src": "dist/main.js",
+            "src": "index.js",
             "use": "@vercel/node"
         }
     ],
