--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,8 +1,15 @@
-{
+  {
+
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "server.js"
+        }
+    ],
     "version": 2,
     "builds": [
         {
-            "src": "index.js",
+            "src": "dist/main.js",
             "use": "@vercel/node"
         }
     ],
@@ -30,3 +37,4 @@
         }
     ]
 }
+
