--- a/server/vercel.json
+++ b/server/vercel.json
@@ -9,7 +9,7 @@
     "version": 2,
     "builds": [
         {
-            "src": "dist/main.js",
+            "src": "server.js",
             "use": "@vercel/node"
         }
     ],
